--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -20,7 +20,7 @@
     transition: 0.5s;
 }
 .nav-connect:hover{
-    transform: scale(1.05);
+    transform: scale(1.1);
 }
 .nav-menu li{
     display: flex;
@@ -36,4 +36,11 @@
 .anchor-link{
     text-decoration: none;
     color: white;
+}
+.nav-menu li:hover{
+    transform: scale(1.10);
+    border-radius: 10px;
+    transition: 0.3s;
+    padding: 10px 10px;
+    background: linear-gradient(270deg, #DF8908 10%, #B415FF 100%);
 }
