--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -48,6 +48,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    
 }
 .about-skill{
     display: flex;
@@ -60,6 +61,7 @@
     min-width: 150px;
     font-size: 20px;
     font-weight: 500;
+    text-align: justify;
 }
 .about-skill hr{
     outline: none;
@@ -73,7 +75,8 @@
     display: flex;
     width: 100%;
     justify-content: space-around;
-    margin-bottom: 80px;
+    margin-bottom: 0px;
+    margin-top: 100px;
 }
 .about-achievement{
     display: flex;
@@ -81,6 +84,7 @@
     align-items: center;
     gap: 10px;
     transition: 0.5s;
+    margin-top: 90px;
 }
 .about-achievement h1{
     font-size: 60px;
