--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -2,7 +2,7 @@
     margin: 50px 20px;
     display: flex;
     flex-direction: column;
-    gap:30px;
+    gap:20px;
 }
 .footer-top{
     display: flex;
@@ -11,6 +11,10 @@
 .footer-top-left p{
     font-size: 20px;
     max-width: 400px;
+}
+.footer-top-left img{
+    width: auto;
+    height: 30px;
 }
 .footer-top-right{
     display: flex;
@@ -50,7 +54,7 @@
 .footer-bottom-right{
     display: flex;
     gap: 50px;
-    margin-bottom: 50px;
+    margin-bottom: 15px;
 }
 .footer-email-input:hover{
     border: 2px solid white;
