--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -2,7 +2,11 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 20px 40px;
+    margin: 20px 30px;
+}
+.navbar img{
+    width: auto;
+    height: 25px;
 }
 .nav-menu{
     display: flex;
@@ -12,7 +16,7 @@
     font-size: 20px;
 }
 .nav-connect{
-    padding: 15px 35px;
+    padding: 10px 20px;
     border-radius: 50px;
     background: linear-gradient(267deg, #DA7C25 0.36%, #B923E1 102.06%);
     font-size: 22px;
@@ -21,6 +25,7 @@
 }
 .nav-connect:hover{
     transform: scale(1.1);
+    font-weight: 500;
 }
 .nav-menu li{
     display: flex;
@@ -41,6 +46,7 @@
     transform: scale(1.10);
     border-radius: 10px;
     transition: 0.3s;
-    padding: 10px 10px;
+    padding: 10px 20px;
+    font-weight: 500;
     background: linear-gradient(270deg, #DF8908 10%, #B415FF 100%);
 }
