--- a/src/components/services/Services.css
+++ b/src/components/services/Services.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: center;
     gap: 80px;
-    margin: 80px 170px;
+    margin: 0px 20px;
 }
 .services-title{
     position: relative;
@@ -25,17 +25,19 @@
     flex-direction: column;
     justify-content: center;
     gap: 20px;
-    padding: 60px;
+    padding: 40px;
     border-radius: 10px;
     border: 2px solid white;
     transition: 0.4s;
     cursor: pointer;
+    width: 400px;
+    height: 200px;
 }
 .services-container{
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 40px;
-    margin-bottom: 80px;
+    margin-bottom: 10px;
 }
 .services-format h3{
     font-size: 28px;
@@ -53,7 +55,6 @@
     color: #d4d4d4;
     font-size: 24px;
     line-height: 40px;
-    max-width: 300px;
 }
 .services-readmore{
     display: flex;
@@ -66,4 +67,28 @@
     background-image: linear-gradient(45deg, #3f0028, #582300);
     transform: scale(1.05);
     transition: 0.4s;
+}
+
+.services-showmore{
+    display: flex;
+    gap: 15px;
+    border-radius: 50px;
+    border: 2px solid white;
+    padding: 15px 40px;
+    font-size: 22px;
+    font-weight: 500;
+    margin-bottom: 40px;
+    transition: 0.6s;
+    cursor: pointer;
+}
+
+.services-showmore:hover{
+    gap: 30px;
+    transition: 0.6s;
+
+}
+a{
+    text-decoration: none;
+    color: white;
+    font-weight: 500;
 }
