--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -12,7 +12,7 @@
 }
 .about-title h1{
     padding: 0 30px;
-    font-size: 70px;
+    font-size: 50px;
     font-weight: 600;
 }
 .about-title img{
@@ -20,7 +20,7 @@
     bottom: 0;
     right: 0;
     z-index: -1;
-    width: 200px;
+    width: 110px;
 }
 .about-section{
     display: flex;
@@ -42,6 +42,7 @@
     gap: 20px;
     font-size: 20px;
     font-weight: 400;
+    text-align: justify;
     
 }
 .about-skills{
@@ -76,7 +77,7 @@
     width: 100%;
     justify-content: space-around;
     margin-bottom: 0px;
-    margin-top: 100px;
+    margin-top: 20px;
 }
 .about-achievement{
     display: flex;
@@ -97,6 +98,11 @@
 .about-achievement p{
     font-size: 22px;
     font-weight: 500;
+}
+.company{
+    font-size: 18px;
+    font-weight: 400;
+    text-align: center;
 }
 .about-skill:hover{
     transform: scale(1.05);
