--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -11,7 +11,7 @@
 }
 .contact-title h1{
     padding: 0px 30px;
-    font-size: 70px;
+    font-size: 50px;
     font-weight: 600;
 }
 .contact-title img{
@@ -19,6 +19,7 @@
     bottom: 0;
     right: 0;
     z-index: -1;
+    width: 110px;
 }
 .contact-section{
     display: flex;
@@ -31,7 +32,7 @@
     width: 400px;
 }
 .contact-left h1{
-    font-size: 80px;
+    font-size: 60px;
     font-weight: 700;
     background: linear-gradient(270deg, #DF8908 80%, #B415FF 100%);
     background-clip: text;
