--- a/src/components/hero/Hero.css
+++ b/src/components/hero/Hero.css
@@ -14,6 +14,7 @@
     width: 65%;
     font-size: 60px;
     font-weight: 600;
+    margin-bottom: -10px;
 }
 .hero h1 span{
     background: linear-gradient(270deg, #DF8908 10%, #B415FF 100%);
@@ -26,7 +27,7 @@
     width: 50%;
     text-align: center;
     font-size: 24px;
-    line-height: 40px;
+    line-height: 35px;
 }
 .hero-action{
     display: flex;
