--- a/src/components/mywork/MyWork.css
+++ b/src/components/mywork/MyWork.css
@@ -12,7 +12,7 @@
 }
 .mywork-title h1{
     padding: 0 30px;
-    font-size: 80px;
+    font-size: 50px;
     font-weight: 600;
 
 }
@@ -21,26 +21,43 @@
     bottom: 0;
     right: 0;
     z-index: -1;
+    width: 110px;
 }
-.mywork-container{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 20px;
-
+.mywork-container-project{
+    display: flex;
+    gap: 40px;
+    text-align: justify;
+    margin-bottom: -40px;
+    
 }
-.mywork-container img{
+.mywork-container-project img{
     box-sizing: border-box;
     width: 400px;
     height: auto;
     transition: 0.3s;
     cursor: pointer;
 }
-.mywork-container img:hover{
+.mywork-container-project img:hover{
     transform: scale(1.10);
     border: 4px solid #ff00ff;
     border-radius: 10px;
     transition: 0.3s;
 }
+.mywork-description{
+    display: flex;
+    gap: 50px;
+}
+.mywork-description p{
+    width: 500px;
+    line-height: 30px;
+    font-size: 20px;
+    font-weight: 200;
+}
+.mywork-tags h4{
+    line-height: 30px;
+    font-weight: 200;
+}
+
 .mywork-showmore{
     display: flex;
     gap: 15px;
