--- a/src/components/services/Services.css
+++ b/src/components/services/Services.css
@@ -11,7 +11,7 @@
 }
 .services-title h1{
     padding: 0 30px;
-    font-size: 70px;
+    font-size: 50px;
     font-weight: 600;
 }
 .services-title img{
@@ -19,55 +19,34 @@
     bottom: 0;
     right: 0;
     z-index: -1;
+    width: 110px;
 }
-.services-format{
+.research-container{
+    margin-bottom: -40px;
+}
+.research-container-week{
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 20px;
-    padding: 40px;
-    border-radius: 10px;
-    border: 2px solid white;
-    transition: 0.4s;
-    cursor: pointer;
+    gap: 30px;
+    text-align: justify;
+    margin-bottom: 40px;
+}
+.research-container-week img{
     width: 400px;
-    height: 200px;
+    height: auto;
 }
-.services-container{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 40px;
-    margin-bottom: 10px;
+.research-container-week img:hover{
+    transform: scale(1.10);
+    border: 4px solid #f50df5;
+    border-radius: 10px;
+    transition: 0.3s;
 }
-.services-format h3{
-    font-size: 28px;
-    font-weight: 600;
+.research-description p{
+    width: 600px;
+    line-height: 30px;
+    font-size: 20px;
+    font-weight: 200;
 }
-.services-format h2{
-    font-size: 38px;
-    font-weight: 800;
-    background: linear-gradient(270deg, #DF8908 50%, #B415FF 100%);
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-.services-format p{
-    color: #d4d4d4;
-    font-size: 24px;
-    line-height: 40px;
-}
-.services-readmore{
-    display: flex;
-    gap: 20px;
-    align-items: center;
-    margin-top:20px ;
-}
-.services-format:hover{
-    border: 2px solid #ff00ff;
-    background-image: linear-gradient(45deg, #3f0028, #582300);
-    transform: scale(1.05);
-    transition: 0.4s;
-}
+
 
 .services-showmore{
     display: flex;
