--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -112,3 +112,72 @@
     transform: scale(1.12);
     transition: 0.5s;
 }
+@media(max-width:1100px){
+    .about-skills{
+        width: 500px;
+    }
+    .about-para{
+        font-weight: 300;
+    }
+    .about-achievement{
+        margin-top: 200px;
+        margin-bottom: -40px;
+    }
+}
+@media (max-width:900px) {
+    .about-para{
+        width: 400px;
+    }
+    .about-title h1{
+        font-size: 40px;
+    }
+    .about-title img{
+        width: 80px;
+    }
+    .about-left img{
+        width: 200px;
+        padding-left: 5px;
+    }
+}
+@media(max-width:800px){
+    .about-left img{
+        width: 180px;
+    }
+    .about-achievement p {
+        padding-left: 50px;
+    }
+    .about-achievement h1{
+        padding-left: 50px;
+    }
+    .about-achievement span{
+        display: none;
+    }
+    .about-skills{
+        display: none;
+    }
+}
+@media(max-width:600px){
+    .about-left img{
+        display: none;
+    }
+    .about-section{
+        display: inline;
+    }
+    .about-left{
+        margin-top: -200px;
+        margin-bottom: 70px;
+    }
+}
+@media(max-width:400px){
+    .about-title h1{
+        font-size: 20px;
+        padding: 0px;
+        margin: 0px;
+    }
+    .about-title img{
+        width: 30px;
+    }
+    .about-para{
+        width: 300px;
+    }
+}
