--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -6,7 +6,7 @@
 }
 .navbar img{
     width: auto;
-    height: 25px;
+    height: 20px;
 }
 .nav-menu{
     display: flex;
@@ -49,4 +49,32 @@
     padding: 10px 20px;
     font-weight: 500;
     background: linear-gradient(270deg, #DF8908 10%, #B415FF 100%);
+}
+@media(max-width:1100px) {
+    .nav-connect{
+        display: none;
+    }
+}
+@media(max-width:900px){
+    .nav-connect{
+        display: none;
+    }
+    .navbar{
+        margin-left: 70px;
+    }
+}
+@media(max-width:800px){
+    .navbar img{
+        display: none;
+    }
+}
+@media(max-width:600px){
+    .nav-menu{
+        gap:20px;
+    }
+}
+@media(max-width:400px){
+    .nav-menu{
+        display: none;
+    }
 }
